Actualice la mascara dos veces, la primera: utilice una version mas extrema, donde agregué: el 30% hace mas pequeño el area visible del BlackHole. El 60% amplia el area de desvanecimiento. Mask-size en 100% asegura que se expanda correctamenteen todo el elemento. Luego fui con algo mas agresivo, ya que no tuve resultados esperados: cambiando 20% el area visible, y 50% el area de desvanecimiento. Mask-size: cover

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,8 +52,8 @@
 
 /* Agrego una máscara para el blackhole */
 .mask-blackhole {
-  mask-image: radial-gradient(circle at center, rgba(255, 255, 255, 1) 40%, rgba(0, 0, 0, 0) 100%);
-  -webkit-mask-image: radial-gradient(circle at center, rgba(255, 255, 255, 1) 40%, rgba(0, 0, 0, 0) 100%);
+  mask-image: radial-gradient(circle at center, rgba(255, 255, 255, 1) 20%, rgba(0, 0, 0, 0) 50%);
+  -webkit-mask-image: radial-gradient(circle at center, rgba(255, 255, 255, 1) 20%, rgba(0, 0, 0, 0) 50%);
   mask-size: cover;
   mask-repeat: no-repeat;
   mask-position: center;
